--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.2.6",
     "jsondiffpatch": "^0.4.1",
     "multiselect-react-dropdown": "^1.6.3",
+    "nanoid": "^3.1.20",
     "next": "10.0.5",
     "next-redux-wrapper": "^6.0.2",
     "react": "17.0.1",
@@ -22,6 +23,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "sass": "^1.32.2",
+    "shortid": "^2.2.16",
     "swr": "^0.4.0"
   }
 }
