--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@storybook/addon-actions": "^6.1.14",
     "@storybook/addon-essentials": "^6.1.14",
+    "@storybook/addon-knobs": "^6.1.14",
     "@storybook/addon-links": "^6.1.14",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.1.14",
